fix bug in displaying on tablet (overflow)

--- a/style.css
+++ b/style.css
@@ -215,6 +215,9 @@ body {
         font-size: 2rem;
         text-align: center;
     }
+    .sticky-top {
+        overflow: hidden;
+    }
 }
 /* mobile phone */
 @media (max-width: 576px){
